tests/baselines/reference/tupleKinds.errors.txt
tests/cases/compiler/tupleKinds.ts(7,5): error TS2322: Type '{ ... }' is not assignable to type '[number, string, boolean, C]'.


==== tests/cases/compiler/tupleKinds.ts (1 errors) ====
    function tuple<...T>(...args:...T): ...T {
        return args;
    }
    
    class C { }
    let inferred = tuple(1, "foo", false, new C());
    let match: [number, string, boolean, C] = tuple(1, "foo", false, new C());
        ~~~~~
!!! error TS2322: Type '{ ... }' is not assignable to type '[number, string, boolean, C]'.